# seistides

./: README.md  pyproject.toml  setup.py
data/: utils_crosssection.py
notebooks/: subregions.py  tidal_modulation_Ridgecrest_GRL_2023.ipynb  tidal_modulation_analysis_BSSA_2026.ipynb
seistides/: __init__.py  models.py  modulation.py  seistides.py  spotl_utils.py  utils.py
